--- a/app/src/main/res/layout/list_item_banner.xml
+++ b/app/src/main/res/layout/list_item_banner.xml
@@ -17,9 +17,10 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            app:bannerImage="@{banner}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:bannerImage="@{banner}"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
