--- a/app/src/main/res/layout/list_item_banner.xml
+++ b/app/src/main/res/layout/list_item_banner.xml
@@ -31,6 +31,31 @@
                 android:scaleType="centerCrop"
                 app:imageUrl="@{banner.imgURL}"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+            <TextView
+                android:id="@+id/banner_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="15dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="@{banner.title}"
+                android:textColor="@color/cardview_light_background"
+                android:textSize="30sp"
+                tools:text="Brazilian Bananas" />
+
+            <TextView
+                android:id="@+id/banner_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="55dp"
+                android:text="@{banner.description}"
+                android:textColor="@color/cardview_light_background"
+                android:textSize="18sp"
+                tools:text="Product of the month" />
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
