--- a/app/src/main/res/layout/list_item_banner.xml
+++ b/app/src/main/res/layout/list_item_banner.xml
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="10dp"
-            android:elevation="10dp"
             app:cardCornerRadius="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -32,31 +31,40 @@
                 app:imageUrl="@{banner.imgURL}"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
-            <TextView
-                android:id="@+id/banner_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginStart="20dp"
-                android:layout_marginBottom="15dp"
-                android:fontFamily="sans-serif-medium"
-                android:text="@{banner.title}"
-                android:textColor="@color/secondaryTextColor"
-                android:textSize="30sp"
-                tools:text="Brazilian Bananas" />
 
-            <TextView
-                android:id="@+id/banner_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginStart="20dp"
-                android:layout_marginBottom="55dp"
-                android:text="@{banner.description}"
-                android:textColor="@color/secondaryTextColor"
-                android:textSize="18sp"
-                tools:text="Product of the month" />
         </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/banner_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="2dp"
+            android:elevation="2dp"
+            android:text="@{banner.description}"
+            android:textColor="@color/secondaryTextColor"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/banner_title"
+            app:layout_constraintStart_toStartOf="@+id/banner_card"
+            tools:text="Product of the month" />
+
+        <TextView
+            android:id="@+id/banner_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="15dp"
+            android:elevation="2dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="@{banner.title}"
+            android:textColor="@color/secondaryTextColor"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="@+id/banner_card"
+            app:layout_constraintStart_toStartOf="@+id/banner_card"
+            tools:text="Brazilian Bananas" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
