--- a/app/src/main/res/layout/market_list_fragment.xml
+++ b/app/src/main/res/layout/market_list_fragment.xml
@@ -23,22 +23,23 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
-        <TextView
+        <SearchView
             android:id="@+id/search_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/searchbar_placeholder"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/banner_list" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/products_list"
-            android:layout_width="409dp"
-            android:layout_height="516dp"
-            android:layout_marginTop="1dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/search_bar"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
