--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -8,6 +8,10 @@
         <variable
             name="product"
             type="com.example.ecommerce.domain.Product" />
+
+        <variable
+            name="clickListener"
+            type="com.example.ecommerce.marketlist.ProductListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -71,6 +75,23 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/add_button"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/card_edge"
+            android:fontFamily="sans-serif-black"
+            android:onClick="@{()->clickListener.onClick(product)}"
+            android:padding="10dp"
+            android:text="Add"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
