--- a/app/src/main/res/layout/list_item_banner.xml
+++ b/app/src/main/res/layout/list_item_banner.xml
@@ -36,32 +36,40 @@
 
         <TextView
             android:id="@+id/banner_description"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="2dp"
             android:elevation="2dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="@{banner.description}"
             android:textColor="@color/secondaryTextColor"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/banner_title"
-            app:layout_constraintStart_toStartOf="@+id/banner_card"
+            app:layout_constraintEnd_toEndOf="@id/banner_card"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/banner_title"
             tools:text="Product of the month" />
 
         <TextView
             android:id="@+id/banner_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="15dp"
             android:elevation="2dp"
+            android:ellipsize="end"
             android:fontFamily="sans-serif-medium"
+            android:maxLines="2"
             android:text="@{banner.title}"
             android:textColor="@color/secondaryTextColor"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="@+id/banner_card"
+            app:layout_constraintEnd_toEndOf="@id/banner_card"
             app:layout_constraintStart_toStartOf="@+id/banner_card"
             tools:text="Brazilian Bananas" />
 
