--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -6,12 +6,12 @@
     <data>
 
         <variable
-            name="product"
-            type="com.example.ecommerce.domain.Product" />
+            name="cartLine"
+            type="com.example.ecommerce.domain.CartLine" />
 
         <variable
             name="clickListener"
-            type="com.example.ecommerce.marketlist.ProductListener" />
+            type="com.example.ecommerce.marketlist.CartLineListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -35,7 +35,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:scaleType="centerCrop"
-                app:imageUrl="@{product.unitImgURL}"
+                app:imageUrl="@{cartLine.product.unitImgURL}"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
         </androidx.cardview.widget.CardView>
 
@@ -46,7 +46,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
             android:fontFamily="sans-serif-black"
-            android:text="@{product.name}"
+            android:text="@{cartLine.product.name}"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/cardView"
             app:layout_constraintTop_toTopOf="@+id/cardView"
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
-            android:text="@{product.price.toString()}"
+            android:text="@{cartLine.product.price.toString()}"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/cardView"
             app:layout_constraintStart_toStartOf="@+id/product_name"
@@ -81,9 +81,9 @@
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
-            android:background="@drawable/card_edge"
+            android:background="@drawable/border_primary"
             android:fontFamily="sans-serif-black"
-            android:onClick="@{()->clickListener.onClick(product)}"
+            android:onClick="@{()->clickListener.onClick(cartLine)}"
             android:padding="10dp"
             android:text="Add"
             android:textAlignment="center"
@@ -91,6 +91,19 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/amount_selector"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/border_secondary"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/add_button"
+            app:layout_constraintEnd_toEndOf="@+id/add_button"
+            app:layout_constraintStart_toStartOf="@+id/add_button"
+            app:layout_constraintTop_toTopOf="@+id/add_button">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
