--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -10,7 +10,11 @@
             type="com.example.ecommerce.domain.CartLine" />
 
         <variable
-            name="clickListener"
+            name="addClickListener"
+            type="com.example.ecommerce.marketlist.CartLineListener" />
+
+        <variable
+            name="removeClickListener"
             type="com.example.ecommerce.marketlist.CartLineListener" />
     </data>
 
@@ -78,31 +82,70 @@
 
         <TextView
             android:id="@+id/add_button"
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:background="@drawable/border_primary"
             android:fontFamily="sans-serif-black"
-            android:onClick="@{()->clickListener.onClick(cartLine)}"
+            android:onClick="@{()->addClickListener.onClick(cartLine)}"
             android:padding="10dp"
             android:text="Add"
             android:textAlignment="center"
             android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="invisible" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/amount_selector"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/border_secondary"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/add_button"
             app:layout_constraintEnd_toEndOf="@+id/add_button"
             app:layout_constraintStart_toStartOf="@+id/add_button"
             app:layout_constraintTop_toTopOf="@+id/add_button">
 
+            <TextView
+                android:id="@+id/minus_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="@{()->removeClickListener.onClick(cartLine)}"
+                android:paddingStart="15dp"
+                android:text="-"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/product_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{String.valueOf(cartLine.prodAmount)}"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="4" />
+
+            <TextView
+                android:id="@+id/plus_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="@{()->addClickListener.onClick(cartLine)}"
+                android:paddingEnd="15dp"
+                android:text="+"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
