--- a/app/src/main/res/layout/list_item_checkout_line.xml
+++ b/app/src/main/res/layout/list_item_checkout_line.xml
@@ -2,16 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/product_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:adjustViewBounds="false"
         android:background="@drawable/corner_radius"
         android:scaleType="center"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
@@ -34,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/product_name"
+        app:layout_constraintBaseline_toBaselineOf="@+id/product_name"
         app:layout_constraintEnd_toEndOf="@+id/product_image"
         tools:text="$35" />
 
