--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,7 +12,9 @@
 
         <action
             android:id="@+id/action_loginFragment_to_marketListFragment"
-            app:destination="@id/marketListFragment" />
+            app:destination="@id/marketListFragment"
+            app:popUpTo="@id/navigation"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
