--- a/app/src/main/res/drawable/radius_solid_grey.xml
+++ b/app/src/main/res/drawable/radius_solid_grey.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 <size android:width="10dp" />
 <solid
-    android:color="@color/colorPrimary" />
+    android:color="@android:color/darker_gray" />
 <padding
     android:bottom="15dp"
     android:left="0dp"
