--- a/app/src/main/res/layout/list_item_checkout_line.xml
+++ b/app/src/main/res/layout/list_item_checkout_line.xml
@@ -5,29 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/product_image"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/product_card"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:adjustViewBounds="false"
-        android:background="@drawable/corner_radius"
-        android:scaleType="center"
+        app:cardCornerRadius="10dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/product_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="false"
+            android:scaleType="center"
+            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/product_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-black"
         android:textSize="20sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/product_price"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/product_image"
         tools:text="Watermelon" />
 
     <TextView
@@ -36,15 +42,16 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:textSize="24sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/product_name"
-        app:layout_constraintEnd_toEndOf="@+id/product_image"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="@+id/product_card"
+        app:layout_constraintTop_toBottomOf="@+id/product_card"
         tools:text="$35" />
 
     <TextView
         android:id="@+id/product_units"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="@+id/product_name"
         app:layout_constraintTop_toBottomOf="@+id/product_name"
         tools:text="3 units" />
