General app theme styling

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/marketListFragment"
         android:name="com.example.ecommerce.marketlist.MarketListFragment"
-        android:label="eMarket"
+        android:label=""
         tools:layout="@layout/market_list_fragment" >
         <action
             android:id="@+id/action_cartCheckout"
