--- a/app/src/main/res/layout/list_item_checkout_line.xml
+++ b/app/src/main/res/layout/list_item_checkout_line.xml
@@ -27,12 +27,15 @@
 
     <TextView
         android:id="@+id/product_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:ellipsize="end"
         android:fontFamily="sans-serif-black"
+        android:maxLines="1"
         android:textSize="20sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/product_price"
+        app:layout_constraintEnd_toStartOf="@id/product_price"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Watermelon" />
 
@@ -40,9 +43,9 @@
         android:id="@+id/product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:textSize="24sp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/product_card"
         app:layout_constraintTop_toBottomOf="@+id/product_card"
         tools:text="$35" />
