Adding checkout loading progress bar, for better user experience

--- a/app/src/main/res/layout/cart_checkout_fragment.xml
+++ b/app/src/main/res/layout/cart_checkout_fragment.xml
@@ -68,4 +68,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/checkout_progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateDrawable="@drawable/progress"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/checkout_button"
+        app:layout_constraintEnd_toEndOf="@id/checkout_button"
+        app:layout_constraintStart_toStartOf="@id/checkout_button"
+        app:layout_constraintTop_toTopOf="@id/checkout_button"
+
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
